prover-ray/zkcdriver/testdata/synced/invalid/memory_02.zkc
//error:6:3-12:unknown symbol
pub output res(address:u16) -> (word:u16)

fn test() {
  // write output
  result[0] = 42
  // done
  return
}
